test_apps/test-typechecker/fail/functionnoreturn.app
application test

section datamodel

globals {
  function getA(i : Int) {
    return "a";
  }
}
